tests/NormalTests/paczka1/fuzzy1/10456712.err
Error in line 1: ?vrKNS(zkvR
Error in line 2: S130 S130 95,0
Error in line 5: kXpQlfJkbfa S952 36,3
Error in line 6: kXpQlfJkbfa S435 9,0
Error in line 12: kXpQlfJkbfa Al5 l9,5
Error in line 3: S130 S952 30,1
Error in line 11: kXpQlfJkbfa A15 26,7
